--- a/microservices/docker-compose.yml
+++ b/microservices/docker-compose.yml
@@ -22,6 +22,27 @@ services:
       - POSTGRES_PASSWORD=movie_db_password
       - POSTGRES_DB=movie_db_dev
 
+  product_service:
+    build: ./product-service
+    command: uvicorn app.main:app --reload --host 0.0.0.0 --port 8000
+    volumes:
+      - ./product-service/:/app/
+    ports:
+      - 8002:8000
+    environment:
+      - DATABASE_URI=postgresql://product_db_username:product_db_password@product_db/product_db_dev
+    depends_on:
+      - product_db
+
+  product_db:
+    image: postgres:12.1-alpine
+    volumes:
+      - postgres_data_product:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=product_db_username
+      - POSTGRES_PASSWORD=product_db_password
+      - POSTGRES_DB=product_db_dev
+
   nginx:
     image: nginx:latest
     ports:
@@ -30,6 +51,8 @@ services:
       - ./nginx_config.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - movie_service
+      - product_service
 
 volumes:
   postgres_data_movie:
+  postgres_data_product:
