--- a/microservices/nginx_config.conf
+++ b/microservices/nginx_config.conf
@@ -1,8 +1,37 @@
+# server {
+# listen 8080;
+# server_name localhost;
+# location /api/v1/movies {
+#   proxy_pass http://movie_service:8000/api/v1/movies;
+#   proxy_set_header X-Real-IP $remote_addr;
+#   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#   proxy_set_header X-Forwarded-Proto $scheme;
+#   proxy_set_header Host $http_host;
+#   proxy_set_header X-NginX-Proxy true;
+# }
+
+# location /api/v1/product {
+# proxy_pass http://product_service:8000/api/v1/product;
+# proxy_set_header X-Real-IP $remote_addr;
+# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+# proxy_set_header X-Forwarded-Proto $scheme;
+# proxy_set_header Host $http_host;
+# proxy_set_header X-NginX-Proxy true;
+# }
+
+# }
+
+
+
 server {
   listen 8080;
 
   location /api/v1/movies {
     proxy_pass http://movie_service:8000/api/v1/movies;
+  }
+
+  location /api/v1/product {
+    proxy_pass http://product_service:8000/api/v1/product;
   }
 
 }
